--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -69,7 +69,7 @@
           <div class="card m-3">
             <div class="card-body features-icons-item mx-auto mb-2">
               <div class="features-icons-icon d-flex">
-                <i class="icon-list m-auto text-primary"></i>
+                <i class="icon-list m-auto text-indigo"></i>
               </div>
               <h4 class="card-title">Browse Courses</h4>
               <p class="card-text font-weight-light mb-0">See what other UVA students say about classes and professors</p>
@@ -83,7 +83,7 @@
           <div class="card m-3">
             <div class="card-body features-icons-item mx-auto mb-2">
               <div class="features-icons-icon d-flex">
-                <i class="icon-layers m-auto text-primary"></i>
+                <i class="icon-layers m-auto text-indigo"></i>
               </div>
               <h4 class="card-title">View Grades</h4>
               <p class="card-text font-weight-light mb-0">Check out actual grade distributions from past semesters</p>
@@ -93,11 +93,11 @@
       </div>
 
       <div class="col-lg-4">
-        <a href="{% url 'browse' %}" class="link-unstyled">
+        <a href="{% url 'new_review' %}" class="link-unstyled">
           <div class="card m-3">
             <div class="card-body features-icons-item mx-auto mb-2">
               <div class="features-icons-icon d-flex">
-                <i class="icon-pencil m-auto text-primary"></i>
+                <i class="icon-pencil m-auto text-indigo"></i>
               </div>
               <h4 class="card-title">Write a Review</h4>
               <p class="card-text font-weight-light mb-0">Help our community by telling others about your class experience</p>
@@ -109,13 +109,80 @@
   </div>
 </section>
 
-<!-- Image Showcases -->
-<section class="about_team">
+<!-- About Team -->
+<section class="about-team bg-light">
+  <div class="row about-header">
+    <div class="col-lg-8 p-4 bg-indigo text-white">
+      <h3 class="font-weight-light pl-5">We'll connect you to courses you'll love, and make enrollment stress free.</h3>
+    </div>
+    <div class="col-lg-4">
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row about-content pt-5">
+      <div class="col-lg-8">
+        <div class="row team-photos text-center">
+          {% for member in executive_team %}
+            <div class="col-lg-3 col-sm-4 d-flex">
+              <div class="card about-member mb-4 shadow-sm flex-fill">
+                <div class="about-pfp">
+                  <img class="card-img-top" src="{% static 'about/team-pfps/'|add:member.img_filename %}" alt="{{ member.name }}">
+                </div>
+                <div class="card-body px-1 py-2">
+                  <h6 class="card-text">{{ member.name }}</h6>
+                  <!-- <p class="card-text">{{ member.role }}</p> -->
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <a href="{% url 'about' %}" class="link-unstyled">
+          <div class="card about-info mx-3">
+            <div class="card-body mx-auto mb-2">
+              <h3 class="card-title">About Us</h3>
+              <p class="card-text font-weight-light mb-2">
+                theCourseForum is a product of volunteer developers and contributors from the UVA community.
+              </p>
+              <a href="{% url 'about' %}" class="btn btn-primary bg-indigo">Meet the full team!</a>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
 
 </section>
 
-<!-- Testimonials -->
-<section class="testimonials text-center bg-light">
+<!-- Call to Action -->
+<section class="call-to-action bg-light text-center">
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-9 mx-auto">
+        <h2 class="mb-4">Tell us about your experience</h2>
+        <p class="lead mb-5">Keep in touch! We would love to hear about your experience and areas where you think we can improve.</p>
+      </div>
+      <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+        <form>
+          <div class="form-row">
+            <div class="col-12 col-md-9 mb-2 mb-md-0">
+              <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
+            </div>
+            <div class="col-12 col-md-3">
+              <button type="submit" class="btn btn-block btn-lg btn-primary">Feedback</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!-- Testimonials (Add later with real feedback?)-->
+<!-- <section class="testimonials text-center bg-light">
   <div class="container">
     <h2 class="mb-5">What people are saying...</h2>
     <div class="row">
@@ -142,31 +209,7 @@
       </div>
     </div>
   </div>
-</section>
-
-<!-- Call to Action -->
-<section class="call-to-action text-white text-center">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-xl-9 mx-auto">
-        <h2 class="mb-4">Tell us about your experience</h2>
-      </div>
-      <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-        <form>
-          <div class="form-row">
-            <div class="col-12 col-md-9 mb-2 mb-md-0">
-              <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-            </div>
-            <div class="col-12 col-md-3">
-              <button type="submit" class="btn btn-block btn-lg btn-primary">Feedback</button>
-            </div>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</section>
+</section> -->
 
 <!-- Footer -->
 <footer class="footer">
@@ -190,7 +233,7 @@
             <a href="{% url 'privacy' %}">Privacy Policy</a>
           </li>
         </ul>
-        <p class="text-muted small mb-4 mb-lg-0">&copy; theCourseForum 2020. All Rights Reserved.</p>
+        <p class="text-indigo small mb-4 mb-lg-0">&copy; theCourseForum 2020. All Rights Reserved.</p>
       </div>
       <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
         <ul class="list-inline mb-0">
