--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -156,23 +156,46 @@
 
 </section>
 
-<!-- Call to Action -->
-<section class="call-to-action bg-light text-center">
+<!-- Feedback Form -->
+<section class="feedback bg-light text-center">
   <div class="container">
     <div class="row">
-      <div class="col-xl-9 mx-auto">
+      <div class="col-md-10 mx-auto">
         <h2 class="mb-4">Tell us about your experience</h2>
-        <p class="lead mb-5">Keep in touch! We would love to hear about your experience and areas where you think we can improve.</p>
+        <p class="lead mb-5">Keep in touch! We would love to hear about your experience with the site and areas where you think we can improve.</p>
       </div>
-      <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+      <div class="col-md-10 mx-auto text-left">
         <form>
           <div class="form-row">
-            <div class="col-12 col-md-9 mb-2 mb-md-0">
-              <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
+            <div class="col-md-6">
+              <div class="form-row">
+                <div class="form-group col-md-6">
+                  <label for="inputFname">First Name</label>
+                  <input type="text" class="form-control" id="inputFname" placeholder="Karen">
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="inputLname">Last Name</label>
+                  <input type="text" class="form-control" id="inputLname" placeholder="Doe">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputEmail">Email</label>
+                <input type="email" class="form-control" id="inputEmail" placeholder="youremail@virginia.edu">
+              </div>
             </div>
-            <div class="col-12 col-md-3">
-              <button type="submit" class="btn btn-block btn-lg btn-primary">Feedback</button>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="inputTitle">Title</label>
+                <input type="text" class="form-control" id="inputTitle" placeholder="Message Subject">
+              </div>
+              <div class="form-group">
+                <label for="inputMessage">Feedback</label>
+                <textarea type="text" class="form-control" id="inputMessage" rows="6" placeholder="Write your message here..."></textarea>
+              </div>
             </div>
+          </div>
+          <div class="text-right">
+            <button type="submit" class="btn btn-primary bg-indigo">Submit Feedback</button>
           </div>
         </form>
       </div>
