added common form css and formatting updates

--- a/tcf_website/templates/base/bugform.html
+++ b/tcf_website/templates/base/bugform.html
@@ -1,11 +1,15 @@
 {% load static %}
 
+{% block styles %}
+<link rel="stylesheet" href="{% static 'common/form.css' %}" />
+{% endblock %}
+
 <!-- found a bug form pop up (modal) -->
 <div class="modal fade" id="bugModal" tabindex="-1" role="dialog" aria-labelledby="bugModal" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title center" id="bugModal">Report a Bug </h5>
+        <h5 class="modal-title" id="bugModal">Report a Bug </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
