--- a/tcf_website/static/common/form.css
+++ b/tcf_website/static/common/form.css
@@ -1,6 +1,7 @@
-input, textarea {
-  background-color: #EBEBEB
-  color: #FFFFFF
+.form-control {
+  background-color: #EBEBEB;
+  color: #000000;
+  border: none;
 }
 
 .form-row {
