Search page styling updates

--- a/tcf_website/templates/base/base.html
+++ b/tcf_website/templates/base/base.html
@@ -19,6 +19,7 @@
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{% static 'base/simple-sidebar.css'%}">
     <link rel="stylesheet" href="{% static 'base/base.css' %}" />
+    <link rel="stylesheet" href="{% static 'base/tcf-style.css' %}" />
 
     {% block styles %}
     {% endblock %}
