--- a/tcf_website/static/search/search.css
+++ b/tcf_website/static/search/search.css
@@ -3,6 +3,10 @@
   background-color: white;
 }
 
+.result-nav .btn-group {
+  flex-wrap: wrap;
+}
+
 .search-result-header h3, .search-result-header p {
   display: inline-block;
 }
