Wrap query text

--- a/tcf_website/templates/search/search.html
+++ b/tcf_website/templates/search/search.html
@@ -10,7 +10,7 @@
 
       <div class="search-title row p-4">
         <h2>
-          Search results - <b><i>{{ query }}</i></b>
+          Search results - <b><i>{{ displayed_query }}</i></b>
         </h2>
       </div>
 
