added common form validation file and updated formatting

--- a/tcf_website/templates/base/bugform.html
+++ b/tcf_website/templates/base/bugform.html
@@ -45,5 +45,6 @@
 
 
 {% block js %}
+<script src="{% static 'common/form.js' %}"></script>
 <script src="{% static 'base/bugform.js' %}"></script>
 {% endblock %}
