update form color

--- a/tcf_website/static/common/form.css
+++ b/tcf_website/static/common/form.css
@@ -1,7 +1,7 @@
 .form-control {
   background-color: #EBEBEB;
   color: #000000;
-  border-color: #FFFFFF;
+  border-color: #EBEBEB;
 }
 
 .form-row {
