--- a/tcf_website/static/browse/browse.css
+++ b/tcf_website/static/browse/browse.css
@@ -7,6 +7,10 @@
     padding: 0 0 0 10px;
 }
 
+.font-weight-bold {
+    margin-top: 20px;
+}
+
 @media (min-width: 768px) {
     .department-list {
         columns: 2;
