--- a/tcf_website/templates/base/messages.html
+++ b/tcf_website/templates/base/messages.html
@@ -7,7 +7,7 @@
 {% if messages %}
     <div class="content">
         {% for message in messages %}
-            <div class="alert alert-{{message.tags}} alert-dismissible fade show">
+            <div class="alert {{message.tags}} alert-dismissible fade show">
                 {{ message }}
                 <button type="button" class="close" data-dismiss="alert">
                     <span>&times;</span>
