--- a/tcf_website/templates/profile/profile.html
+++ b/tcf_website/templates/profile/profile.html
@@ -8,38 +8,22 @@
 <div class="container-fluid">
     <div class="row d-flex flex-column align-items-center">
         <h2>Profile</h2>
-        <div class="card col-9 col-md-4 text-center mt-3">
-            <div class="card-body">
-                <h4 class="card-title">
-                    {{ user.full_name }}
-                </h4>
-                <p class="card-text">
-                    <i class="fas fa-at fa-fw"></i> {{ user.computing_id }}
-                </p>
-                <p class="card-text">
-                    <i class="fas fa-university fa-fw"></i> University of Virginia
-                </p>
-                <p class="card-text">
-                    <i class="fas fa-graduation-cap fa-fw"></i> Class of {{ user.graduation_year }}
-                </p>
-            </div>
-        </div>
-        <div class="card col-12 col-sm-9 col-md-9 col-lg-6 mt-3">
+        <div class="card col-12 col-sm-9 col-md-9 col-xl-6 mt-3">
             <div class="card-body">
                 <h4 class="card-title"><i class="far fa-edit"></i> My Details</h4>
                 <form method="POST">
                     {% csrf_token %}
                     <div class="form-row">
-                        <div class="col">
+                        <div class="col-12 col-lg-4 ">
                             {{ form.first_name.label_tag }}
                             {{ form.first_name }}
                             <small id="first_name" class="form-text text-muted">Your name is never public.</small>
                         </div>
-                        <div class="col">
+                        <div class="col-12 col-lg-4 ">
                             {{ form.last_name.label_tag }}
                             {{ form.last_name }}
                         </div>
-                        <div class="col">
+                        <div class="col-12 col-lg-4 ">
                             {{ form.graduation_year.label_tag }}
                             {{ form.graduation_year }}
                         </div>
