--- a/tcf_website/templates/base/sidebar.html
+++ b/tcf_website/templates/base/sidebar.html
@@ -53,7 +53,7 @@ d-flex flex-column justify-content-between" id="sidebar-wrapper">
     <h6>theCourseForum &copy; {{ LATEST_SEMESTER.year }}</h6>
     <p>
         <span>
-            <a href="#bugModal" data-toggle="modal" data-target="#bugModal" onclick="setUrlField()"> Found a bug?</a>
+            <a href="#bugModal" data-toggle="modal" data-target="#bugModal" onclick="resetForm()"> Found a bug?</a>
         </span>
         {% if DEBUG %}
         <span> | DEBUG Mode</span>
