--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -39,5 +39,5 @@
 
 
 {% block js %}
-<script src="{% static 'common/show-hide.js' %}"></script>
+<script type="module" src="{% static 'common/bind-show-hide.js' %}"></script>
 {% endblock %}
