--- a/tcf_website/templates/common/toolbar.html
+++ b/tcf_website/templates/common/toolbar.html
@@ -9,16 +9,16 @@
     </div>
     {% if sorting %}
     <div class="btn-group" role="group" aria-label="Basic example">
-        <button type="button" id="number-sort-btn" onclick="sortByNumber()" class="btn btn-outline-dark active">Number</button>
-        <button type="button" id="rating-sort-btn" onclick="sortByRating()" class="btn btn-outline-dark">Rating</button>
-        <button type="button" id="diff-sort-btn" onclick="sortByDifficulty()" class="btn btn-outline-dark">Difficulty</button>
-        <button type="button" id="gpa-sort-btn" onclick="sortByGpa()" class="btn btn-outline-dark">GPA</button>
+        <button type="button" id="number-sort-btn" class="btn btn-outline-dark active">Number</button>
+        <button type="button" id="rating-sort-btn" class="btn btn-outline-dark">Rating</button>
+        <button type="button" id="diff-sort-btn" class="btn btn-outline-dark">Difficulty</button>
+        <button type="button" id="gpa-sort-btn" class="btn btn-outline-dark">GPA</button>
     </div>
     {% endif %}
     {% if active_text %}
     <div class="btn-group" role="group" aria-label="Basic example">
-        <button type="button" id="hide-btn" onclick="hideOld()" class="btn btn-outline-dark active">{{ active_text }}</button>
-        <button type="button" id="show-btn" onclick="showOld()" class="btn btn-outline-dark"> {{ hidden_text }} </button>
+        <button type="button" id="hide-btn" class="btn btn-outline-dark active">{{ active_text }}</button>
+        <button type="button" id="show-btn" class="btn btn-outline-dark"> {{ hidden_text }} </button>
     </div>
     {% endif %}
 </div>
