--- a/tcf_website/templates/reviews/reviews.html
+++ b/tcf_website/templates/reviews/reviews.html
@@ -1,4 +1,5 @@
 <!-- TODO: include review styles here -->
+{% load static %}
 
 <div class="reviews container-lg">
     <ul class="review-list" style="list-style-type: none;">
@@ -22,3 +23,21 @@
     {% endfor %}
     </ul>
 </div>
+
+<script type="module" src="{% static 'reviews/review.js' %}"></script>
+<script>
+    {% if user.is_authenticated %}
+        Array.prototype.forEach.call(document.getElementsByClassName("upvote"), function(button) {
+            button.addEventListener('click', ()=>{
+                    onclick="handleVote({{review.id}}, true)"
+            }, false);
+            button.href = "javascript:;"
+        });
+        Array.prototype.forEach.call(document.getElementsByClassName("downvote"), function(button) {
+            button.addEventListener('click', ()=>{
+                    onclick="handleVote({{review.id}}, false)"
+            }, false);
+            button.href = "javascript:;"
+        });
+    {% endif %}
+</script>
