--- a/tcf_website/templates/base/base.html
+++ b/tcf_website/templates/base/base.html
@@ -5,6 +5,7 @@
 <!-- Custom styles for this template -->
 <link rel="stylesheet" href="{% static 'base/simple-sidebar.css'%}">
 <link rel="stylesheet" href="{% static 'base/base.css' %}" />
+<link rel="stylesheet" href="{% static 'base/tcf-style.css' %}" />
 {% endblock %}
 
 
