--- a/tcf_website/static/base/tcf-style.css
+++ b/tcf_website/static/base/tcf-style.css
@@ -31,8 +31,15 @@ body {
   font-weight: 500;
 }
 
+a {
+    color: inherit;
+}
 a:hover {
   color: var(--accent-color);
+}
+ul {
+    padding: 0;
+    list-style-type: none;
 }
 
 /*************UTILITY CLASSES**************/
