--- a/tcf_website/static/browse/browse.css
+++ b/tcf_website/static/browse/browse.css
@@ -14,6 +14,6 @@
 }
 
 .school > .card-header {
-    background-color: rgb(91, 129, 182);
+    background-color: var(--secondary-color);
     color: white;
 }
