--- a/tcf_website/templates/base/index.html
+++ b/tcf_website/templates/base/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="{% static 'base/bootstrap.min.css' %}" />
     <script src="https://kit.fontawesome.com/ed3998fccc.js" crossorigin="anonymous"></script>
 
+    <!-- tCF Custom Styling -->
+    <link rel="stylesheet" href="{% static 'base/tcf-style.css' %}" />
     <!-- Google Fonts: Lato, Open Sans -->
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
