--- a/tcf_website/templates/base/sidebar.html
+++ b/tcf_website/templates/base/sidebar.html
@@ -46,8 +46,8 @@ d-flex flex-column justify-content-between" id="sidebar-wrapper">
       </a>
     {% endif %}
   </div>
-  
-  <div class="footer text-center">
+
+  <div class="footer text-center small">
     <a href="{% url 'privacy' %}">Privacy</a> |
     <a href="{% url 'terms' %}">Terms</a>
     <h6>theCourseForum &copy; {{ LATEST_SEMESTER.year }}</h6>
