--- a/tcf_website/templates/department/department.html
+++ b/tcf_website/templates/department/department.html
@@ -34,10 +34,11 @@
 {% block js %}
 <script type="module" src="{% static 'common/bind-show-hide.js' %}"></script>
 <script type="module" src="{% static 'department/bind-sort.js' %}"></script>
-<script type="module" src="{% static 'department/loadMoreCourses.js' %}"></script>
-<script>
+<script type="module">
+    import { loadPage } from "{% static 'department/loadMoreCourses.js' %}";
+
     {% for sd in department.subdepartment_set.all %}
-        loadPage("{{sd.id}}", `/api/courses/?page=1&page_size=30&subdepartment={{sd.id}}&stats&recent5years`);
+        loadPage("{{sd.id}}", "/api/courses/?page=1&page_size=30&subdepartment={{sd.id}}&stats&recent5years");
     {% endfor %}
 </script>
 {% endblock %}
