--- a/tcf_website/templates/profile/profile.html
+++ b/tcf_website/templates/profile/profile.html
@@ -8,7 +8,8 @@
 <div class="container-fluid">
     <div class="row d-flex flex-column align-items-center">
         <h2>Profile</h2>
-        <div class="card col-12 col-sm-9 col-md-9 col-xl-6 mt-3">
+        <div class="card col-12 col-sm-9 col-md-9 col-xl-6 mt-3 px-0">
+            <img class="card-img-top bg-dark p-4" src="{% static 'base/img/full_logo.png' %}" style="filter: brightness(150%) contrast(75%)">
             <div class="card-body">
                 <h4 class="card-title"><i class="far fa-edit"></i> My Details</h4>
                 <form method="POST">
